# techmadness-2019

./: README.md  entities.txt
backend/supreme-spirit/: Makefile  README.md  pyproject.toml  setup.cfg
backend/supreme-spirit/alembic/: env.py  script.py.mako
backend/supreme-spirit/alembic/versions/: 023d751d47e8_.py  0e9d8e27d52a_create_user_model.py  11c42ddafcfa_.py  13f9ad8e2d2d_.py  1d231fedc8bb_.py  540dda9fd8ea_.py  698e61d58523_.py  6d7c1cc87620_.py  76157c94a97d_.py  776cc0dac452_.py  77ae1fa75e60_.py  7bd79b16bd4f_.py  930061a8ff79_.py  94657cdcf068_.py  a5c9dea2f90e_.py  baad9816473f_.py  c44cebb195d6_.py  d7ab04b70bff_.py  f033ff684de9_.py  fc0d0df8c0cf_.py
backend/supreme-spirit/conf/: settings.py
backend/supreme-spirit/conf/envs/: dev.py
backend/supreme-spirit/crud/: __init__.py  account.py  bound_offer_template.py  offer.py  offer_filter.py  offer_template.py  transaction.py  user.py
backend/supreme-spirit/database/: __init__.py  model_schemas.py
backend/supreme-spirit/database/models/: __init__.py  fields.py  models.py  schemas.py
backend/supreme-spirit/docker/: Dockerfile.server
backend/supreme-spirit/generators/: generate_accounts.py  generate_transactions.py  generate_users.py
backend/supreme-spirit/scripts/: example.py  generate.py  generate_offer_template.py  generate_offers.py  generate_offers_unaccepted.py  generate_transactions.py  generate_users.py
backend/supreme-spirit/services/: utils.py
backend/supreme-spirit/services/core/: __init__.py
backend/supreme-spirit/services/strategy_runner/: runner.py  strategies.py
(+154 files in other folders)
