[tool.poetry]
name = "techmadness-backend"
version = "0.1.0"
description = ""
authors = ["Igor Beschastnov <beschastnovigor@gmail.com>", "Vasiliy Vasiliy <minskij10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# Base
fastapi = "^0.42.0"
SQLAlchemy = "^1.3"
alembic = "^1.2"
# Additional
psycopg2-binary = "^2.8"
ujson = "^1.35"
# Deployment
uvicorn = "^0.10.3"
# Other
pydantic = "^0.32.2"
email-validator = "^1.0"
redis = "^3.3"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"
isort = "^4.3"
unify = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
